objects/tfn_Parcel__c.object
<CustomObject>
    <description>For recording Parcel-level information</description>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <referenceTo>loc03__Easement_FeeTitle__c</referenceTo>
        <relationshipName>Parcels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tfn_Act_Conservation_Tier_Offsets__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>for Offsets Only</inlineHelpText>
        <label>Act. Conservation Tier (Offsets)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Act_Conservation_Tier__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Act. Conservation Tier</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Act_Domestic_Tier__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Act. Domestic Tier</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Act_Historic_Place_Tier__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Act. Historic Place Tier</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Act_Modified_Tier__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Act. Modified Tier</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Act_Natural_Interest_Tier__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Act. Natural Interest Tier</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Act_Sustainable_Tier__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Act. Sustainable Tier</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Conserved_Hectares__c</fullName>
        <label>Conserved Hectares</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Crown_Allotment_Number__c</fullName>
        <label>Crown Allotment Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Crown_Allotment__c</fullName>
        <inlineHelpText>Consists of Crown Allotment Number and Section. Eg. 60A\30</inlineHelpText>
        <label>Crown Allotment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Dealing_Number__c</fullName>
        <label>Dealing Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Folio__c</fullName>
        <label>Folio</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Lot_Number__c</fullName>
        <label>Lot Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Parcel_Coverage__c</fullName>
        <label>Parcel Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Part</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Parcel_Detail__c</fullName>
        <inlineHelpText>Consists of Lot Number, Plan Number Prefix and Plan Number. Eg. 2\PP2045</inlineHelpText>
        <label>Parcel Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Parcel_ID__c</fullName>
        <displayFormat>PCL{0000}</displayFormat>
        <label>Parcel ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>tfn_Parish__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parish</label>
        <referenceTo>tfn_Parish__c</referenceTo>
        <relationshipName>Parcels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Plan_Number_Prefix__c</fullName>
        <label>Plan Number Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CP</fullName>
                    <color>#FFFFFF</color>
                    <label>CP</label>
                </value>
                <value>
                    <fullName>LP</fullName>
                    <color>#FFFFFF</color>
                    <label>LP</label>
                </value>
                <value>
                    <fullName>PS</fullName>
                    <color>#FFFFFF</color>
                    <label>PS</label>
                </value>
                <value>
                    <fullName>TP</fullName>
                    <color>#FFFFFF</color>
                    <label>TP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Plan_Number__c</fullName>
        <label>Plan Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Section__c</fullName>
        <label>Section</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_TFN_Legacy_Record_Number__c</fullName>
        <label>TFN Legacy Record Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Total_Parcel_Area_Ha__c</fullName>
        <formula>tfn_Act_Conservation_Tier__c  +  tfn_Act_Domestic_Tier__c   +  tfn_Act_Historic_Place_Tier__c   +  tfn_Act_Modified_Tier__c   +  tfn_Act_Natural_Interest_Tier__c   +  tfn_Act_Sustainable_Tier__c +  tfn_Act_Conservation_Tier_Offsets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Parcel Area (Ha)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Total_Parcel_Hectares__c</fullName>
        <label>Total Parcel Hectares</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Volume__c</fullName>
        <label>Volume</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Parcel (Vol/Folio)</label>
    <nameField>
        <label>Parcel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parcels (Vol/Folio)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>